log
Fri 10 May 2024 02:45:12 AM UTC: 
 hashmap.c | 25 +++++++++++++++++++++----
 1 file changed, 21 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
3589b07
Fri 10 May 2024 02:50:40 AM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
e9e98fb
Fri 10 May 2024 02:53:42 AM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d3e6678
Fri 10 May 2024 02:53:57 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4f4ee49
Fri 10 May 2024 02:54:31 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
ad09e7a
Fri 10 May 2024 02:58:02 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
ec24bf8
Fri 10 May 2024 03:03:02 AM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
a9034cc
Fri 10 May 2024 03:04:47 AM UTC: 
 hashmap.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccP9rDZS.o: in function `next_test':
test.c:(.text+0x1263): undefined reference to `nextMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x12c8): undefined reference to `nextMap'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0x130c): undefined reference to `nextMap'
collect2: error: ld returned 1 exit status
Compilation failed
e04d2dc
Fri 10 May 2024 03:05:16 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  13|2
total_score: 50/70
d2c736f
Fri 10 May 2024 03:06:16 AM UTC: 
 hashmap.c | 15 +++++----------
 1 file changed, 5 insertions(+), 10 deletions(-)
 tests:  12|2
total_score: 50/70
50268c2
